завершение основного дизайна. анимация раскрытия подробной погоды на день

--- a/mainPage.html
+++ b/mainPage.html
@@ -12,7 +12,7 @@
     <title>Weather</title>
 </head>
 <body>
-<div>
+<div id="boss">
 <div id="search">
     <label>Город:
     <input required placeholder="Название города">
@@ -30,11 +30,11 @@
             </div>
         </div>
         <div class="moreInfo">
-            <div class="info">
-<!--                <span class="morn_temp">Утро: g</span><br>-->
-<!--                <span class="day_temp">День: t</span><br>-->
-<!--                <span class="ev_temp">Вечер: e</span><br>-->
-<!--                <span class="night_temp">Ночь: i</span>-->
+            <div class="info" hidden>
+                <span class="morn_temp">Утро: -15</span><br>
+                <span class="day_temp">День: -5</span><br>
+                <span class="ev_temp">Вечер: -10</span><br>
+                <span class="night_temp">Ночь: -17</span>
             </div>
         </div>
     </div>
@@ -47,11 +47,11 @@
             </div>
         </div>
         <div class="moreInfo">
-            <div class="info">
-                <!--                <span class="morn_temp">Утро: g</span><br>-->
-                <!--                <span class="day_temp">День: t</span><br>-->
-                <!--                <span class="ev_temp">Вечер: e</span><br>-->
-                <!--                <span class="night_temp">Ночь: i</span>-->
+            <div class="info" hidden>
+                <span class="morn_temp">Утро: -15</span><br>
+                <span class="day_temp">День: -5</span><br>
+                <span class="ev_temp">Вечер: -10</span><br>
+                <span class="night_temp">Ночь: -17</span>
             </div>
         </div>
     </div>
@@ -64,11 +64,11 @@
             </div>
         </div>
         <div class="moreInfo">
-            <div class="info">
-                <!--                <span class="morn_temp">Утро: g</span><br>-->
-                <!--                <span class="day_temp">День: t</span><br>-->
-                <!--                <span class="ev_temp">Вечер: e</span><br>-->
-                <!--                <span class="night_temp">Ночь: i</span>-->
+            <div class="info" hidden>
+                <span class="morn_temp">Утро: -15</span><br>
+                <span class="day_temp">День: -5</span><br>
+                <span class="ev_temp">Вечер: -10</span><br>
+                <span class="night_temp">Ночь: -17</span>
             </div>
         </div>
     </div>
@@ -81,11 +81,11 @@
             </div>
         </div>
         <div class="moreInfo">
-            <div class="info">
-                <!--                <span class="morn_temp">Утро: g</span><br>-->
-                <!--                <span class="day_temp">День: t</span><br>-->
-                <!--                <span class="ev_temp">Вечер: e</span><br>-->
-                <!--                <span class="night_temp">Ночь: i</span>-->
+            <div class="info" hidden>
+                <span class="morn_temp">Утро: -15</span><br>
+                <span class="day_temp">День: -5</span><br>
+                <span class="ev_temp">Вечер: -10</span><br>
+                <span class="night_temp">Ночь: -17</span>
             </div>
         </div>
     </div>
@@ -98,11 +98,11 @@
             </div>
         </div>
         <div class="moreInfo">
-            <div class="info">
-                <!--                <span class="morn_temp">Утро: g</span><br>-->
-                <!--                <span class="day_temp">День: t</span><br>-->
-                <!--                <span class="ev_temp">Вечер: e</span><br>-->
-                <!--                <span class="night_temp">Ночь: i</span>-->
+            <div class="info" hidden>
+                <span class="morn_temp">Утро: -15</span><br>
+                <span class="day_temp">День: -5</span><br>
+                <span class="ev_temp">Вечер: -10</span><br>
+                <span class="night_temp">Ночь: -17</span>
             </div>
         </div>
     </div>
@@ -115,11 +115,11 @@
             </div>
         </div>
         <div class="moreInfo">
-            <div class="info">
-                <!--                <span class="morn_temp">Утро: g</span><br>-->
-                <!--                <span class="day_temp">День: t</span><br>-->
-                <!--                <span class="ev_temp">Вечер: e</span><br>-->
-                <!--                <span class="night_temp">Ночь: i</span>-->
+            <div class="info" hidden>
+                <span class="morn_temp">Утро: -15</span><br>
+                <span class="day_temp">День: -5</span><br>
+                <span class="ev_temp">Вечер: -10</span><br>
+                <span class="night_temp">Ночь: -17</span>
             </div>
         </div>
     </div>
@@ -132,11 +132,11 @@
             </div>
         </div>
         <div class="moreInfo">
-            <div class="info">
-                <!--                <span class="morn_temp">Утро: g</span><br>-->
-                <!--                <span class="day_temp">День: t</span><br>-->
-                <!--                <span class="ev_temp">Вечер: e</span><br>-->
-                <!--                <span class="night_temp">Ночь: i</span>-->
+            <div class="info" hidden>
+                <span class="morn_temp">Утро: -15</span><br>
+                <span class="day_temp">День: -5</span><br>
+                <span class="ev_temp">Вечер: -10</span><br>
+                <span class="night_temp">Ночь: -17</span>
             </div>
         </div>
     </div>
