--- a/mainPage.html
+++ b/mainPage.html
@@ -14,30 +14,33 @@
 <body>
 <div id="boss">
 <div id="search">
+    <form onsubmit="return false">
     <label>Город:
-    <input required placeholder="Название города">
-    <button>Найти</button>
+    <input id="set_city" required placeholder="Название города">
+    <button id="getWeather">Найти</button>
     </label>
+    </form>
 </div>
-<div class="get_city"><span id="get_city">Екатеринбург</span></div>
+<div class="get_city"></div>
 <div class="week">
-    <div class="days">
-        <div class="main">
-            <div class="day">Пн</div>
-            <div class="main_info">
-            <span class="max_day_temp">-2</span><br>
-            <span class="min_day_temp">-9</span>
-            </div>
-        </div>
-        <div class="moreInfo">
-            <div class="info" hidden>
-                <span class="morn_temp">Утро: -15</span><br>
-                <span class="day_temp">День: -5</span><br>
-                <span class="ev_temp">Вечер: -10</span><br>
-                <span class="night_temp">Ночь: -17</span>
-            </div>
-        </div>
-    </div>
+
+<!--    <div class="days">-->
+<!--        <div class="main">-->
+<!--            <div class="day">Пн</div>-->
+<!--            <div class="main_info">-->
+<!--            <span class="max_day_temp">-2</span><br>-->
+<!--            <span class="min_day_temp">-9</span>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="moreInfo">-->
+<!--            <div class="info" hidden>-->
+<!--                <span class="morn_temp">Утро: -15</span><br>-->
+<!--                <span class="day_temp">День: -5</span><br>-->
+<!--                <span class="ev_temp">Вечер: -10</span><br>-->
+<!--                <span class="night_temp">Ночь: -17</span>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 
 </div>
 </div>
