исправление багов. добавление отображения даты. выделение текущего дня

--- a/mainPage.html
+++ b/mainPage.html
@@ -39,7 +39,9 @@
 <!--                <span class="ev_temp">Вечер: -10</span><br>-->
 <!--                <span class="night_temp">Ночь: -17</span>-->
 <!--            </div>-->
-<!--        </div>-->
+<!--        </div><br>-->
+<!--        <div class="date"></div>-->
+
 <!--    </div>-->
 
 </div>
