--- a/mainPage.html
+++ b/mainPage.html
@@ -18,15 +18,13 @@
     <label>Город:
     <input id="set_city" required placeholder="Название города">
     <button id="getWeather">
-        <img src="glass.png" alt="">
-        Найти
+        <img src="glass.png" alt="">Найти
     </button>
     </label>
     </form>
 </div>
 <div class="get_city"></div>
 <div class="week">
-
 </div>
 </div>
 </body>
