дебаг.  обработка ошибки

--- a/mainPage.html
+++ b/mainPage.html
@@ -12,6 +12,7 @@
     <title>Weather</title>
 </head>
 <body>
+<div id="error" hidden>! ГОРОД НЕ НАЙДЕН. ПРОВЕРЬТЕ КОРРЕКТНОСТЬ ВВЕДЕННЫХ ВАМИ ДАННЫХ !</div>
 <div id="boss">
 <div id="search">
     <form onsubmit="return false">
@@ -24,8 +25,7 @@
     </form>
 </div>
 <div class="get_city"></div>
-<div class="week">
-</div>
+<div class="week"></div>
 </div>
 </body>
 </html>
