--- a/mainPage.html
+++ b/mainPage.html
@@ -17,7 +17,7 @@
 <div id="search">
     <form onsubmit="return false">
     <label>Город:
-    <input id="set_city" required placeholder="Название города">
+    <input id="set_city" placeholder="Название города">
     <button id="getWeather">
         <img src="glass.png" alt="">Найти
     </button>
